fix overlap with RT menus

--- a/httemplate/elements/xmenu.top.css
+++ b/httemplate/elements/xmenu.top.css
@@ -20,7 +20,7 @@
 
 .webfx-menu {
 	position:		absolute;
-	z-index:		100;
+	z-index:		9999;
 	visibility:		hidden;
 	border:			1px solid #7e0079;
 	 -moz-border-radius: 4px;
